working on index

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Geronimo</title>
 </head>
 
 <body>
+    <div id="topDiv" class="d-flex align-items-center justify-content-center">
+        <div class="bg-dark text-white p-5 rounded border border-3">
+            <h1 class="display-6 text-uppercase text-center">
+
+                Hi, I'm Geronimo <br> Data Analyst
+            </h1>
+        </div>
+    </div>
     <a href="#" data-bs-toggle="modal" data-bs-target="#github-history">Github-History</a>
     <!-- Button trigger modal -->
 
@@ -23,11 +32,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body d-flex flex-column">
-                    <img src='images/Github-2021.png'>
-                    <img src='images/Github-2020.png'>
-                    <img src='images/Github-2019.png'>
-                    <img src='images/Github-2018.png'>
-                    <img src='images/Github-2017.png'>
+                    <img src='assets/images/Github-2021.png'>
+                    <img src='assets/images/Github-2020.png'>
+                    <img src='assets/images/Github-2019.png'>
+                    <img src='assets/images/Github-2018.png'>
+                    <img src='assets/images/Github-2017.png'>
                 </div>
             </div>
         </div>
