modifed leaflet-challenge preview

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 <body>
     <div id="topDiv">
         <div id='title' class="bg-dark text-white">
-            <h1 class="display-6 text-uppercase text-center">
-                Hi, I'm Geronimo <br> Data Analyst
+            <h1 class="text-center">
+                Hi, I'm Geronimo, a data analyst.<br>How can I help?
             </h1>
         </div>
-
         <div class="accordion accordion-flush mt-5" id="accordionExample">
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingOne">
@@ -31,11 +30,12 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#" data-bs-toggle="modal"
-                                    data-bs-target="#github-history">History</a></li>
-                            <li class="breadcrumb-item"><a href="#" data-bs-toggle="modal"
-                                    data-bs-target="#repos">Repositories</a></li>
-                            <li class="breadcrumb-item"><a href="https://github.com/Geerooniimoo">Website</a></li>
+                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2"
+                                    href="#" data-bs-toggle="modal" data-bs-target="#github-history">History</a></li>
+                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2"
+                                    href="#" data-bs-toggle="modal" data-bs-target="#repos">Repositories</a></li>
+                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none"
+                                    href="https://github.com/Geerooniimoo">Website</a></li>
                         </ol>
                     </div>
                 </div>
@@ -109,57 +109,65 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="container-fluid w-75">
-
-                        <div class="row">
-                            <ul class="col-md-3">
-                                <li><a class="dropdown-item" href="#">Leaflet-challenge</a></li>
-                                <li><a class="dropdown-item" href="#">Geerooniimoo.io</a></li>
-                                <li><a class="dropdown-item" href="#">D3-Challenge</a></li>
-                                <li><a class="dropdown-item" href="#">python-api-challenge</a></li>
-                                <li><a class="dropdown-item" href="#">pandas-challenge</a></li>
-                                <li><a class="dropdown-item" href="#">plotly-challenge</a></li>
-                                <li><a class="dropdown-item" href="#">SQLAlchemy-Challenge</a></li>
-                                <li><a class="dropdown-item" href="#">Mission_To_Mars</a></li>
-                                <li><a class="dropdown-item" href="#">matplotlib-challenge</a></li>
-                                <li><a class="dropdown-item" href="#">NFL-RECORDS</a></li>
-                            </ul>
-                            <ul class="col-md-3">
-                                <li><a class="dropdown-item" href="#">heroesmemorygame</a></li>
-                                <li><a class="dropdown-item" href="#">VBA-Scripting</a></li>
-                                <li><a class="dropdown-item" href="#">SQL-Challenge</a></li>
-                                <li><a class="dropdown-item" href="#">infosectechnology</a></li>
-                                <li><a class="dropdown-item" href="#">SpiritualEngineering</a></li>
-                                <li><a class="dropdown-item" href="#">JavaScript-Challenge</a></li>
-                                <li><a class="dropdown-item" href="#">Web-Design-Challenge</a></li>
-                                <li><a class="dropdown-item" href="#">Mission_to_Jupiter</a></li>
-                                <li><a class="dropdown-item" href="#">Password-Generator</a></li>
-                                <li><a class="dropdown-item" href="#">FriendFinder</a></li>
-                            </ul>
-                            <ul class="col-md-3">
-                                <li><a class="dropdown-item" href="#">Gamazon</a></li>
-                                <li><a class="dropdown-item" href="#">realnewslinks</a></li>
-                                <li><a class="dropdown-item" href="#">HYBC</a></li>
-                                <li><a class="dropdown-item" href="#">New-York-Times-API</a></li>
-                                <li><a class="dropdown-item" href="#">liri-node-app</a></li>
-                                <li><a class="dropdown-item" href="#">WeatherForecast</a></li>
-                                <li><a class="dropdown-item" href="#">GifTastic</a></li>
-                                <li><a class="dropdown-item" href="#">Calender</a></li>
-                                <li><a class="dropdown-item" href="#">crudaburger</a></li>
-                            </ul>
-                            <ul class="col-md-3">
-                                <li><a class="dropdown-item" href="#">porfolio</a></li>
-                                <li><a class="dropdown-item" href="#">NodeGuessGame</a></li>
-                                <li><a class="dropdown-item" href="#">TrainScheduler</a></li>
-                                <li><a class="dropdown-item" href="#">CristalCollectorGame</a></li>
-                                <li><a class="dropdown-item" href="#">Hangman-Game</a></li>
-                                <li><a class="dropdown-item" href="#">BoxingGame</a></li>
-                                <li><a class="dropdown-item" href="#">Responsive-HYBC</a></li>
-                                <li><a class="dropdown-item" href="#">Bootstrap-Portfolio</a></li>
-                                <li><a class="dropdown-item" href="#">Basic-Portfolio</a></li>
-                            </ul>
-                        </div>
+                    <div class="container-fluid row">
+                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                        data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Geerooniimoo.io</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">D3-Challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">python-api-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">pandas-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">matplotlib-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">SQL-Challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Web-Design-Challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_to_Jupiter</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Password-Generator</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">FriendFinder</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Gamazon</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">realnewslinks</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">HYBC</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">New-York-Times-API</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">liri-node-app</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">WeatherForecast</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">GifTastic</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Calender</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">crudaburger</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">porfolio</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">NodeGuessGame</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">TrainScheduler</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">CristalCollectorGame</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Hangman-Game</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">BoxingGame</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Responsive-HYBC</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Bootstrap-Portfolio</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" href="#">Basic-Portfolio</a>
+                        </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="leaflet" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ms-auto" id="exampleModalLabel">Leaflet-Challenge preview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary">
+                    <img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1">
+                    <img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2">
+                    <img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3">
                 </div>
             </div>
         </div>
