--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">Geerooniimoo.io</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">D3-Challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">python-api-challenge</a>
-                        <a class="col-md-3 pb-2 text-decoration-none" href="#">pandas-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                        data-bs-target="#pandas" href="#">pandas-challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
@@ -164,16 +165,32 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary">
-                    <img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1">
-                    <img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2">
-                    <img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3">
+                    <div class="my-4" ><img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary"></div>
+                    <div class="my-4" ><img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1"></div>
+                    <div class="my-4" ><img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2"></div>
+                    <div class="my-4" ><img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3"></div>
                 </div>
             </div>
         </div>
     </div>
-
-
+    <div class="modal fade" id="pandas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title ms-auto" id="exampleModalLabel">Pandas-Challenge preview</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="my-4" ><img src="./assets/images/pandas-4.png" class="w-100" alt="summary"></div>
+                    <div class="my-4" ><img src="./assets/images/pandas-5.png" class="w-100" alt="pandas-5"></div>
+                    <div class="my-4" ><img src="./assets/images/pandas-6.png" class="w-100" alt="pandas-6"></div>
+                    <div class="my-4" ><img src="./assets/images/pandas-1.png" class="w-100" alt="pandas-1"></div>
+                    <div class="my-4" ><img src="./assets/images/pandas-2.png" class="w-100" alt="pandas-2"></div>
+                    <div class="my-4" ><img src="./assets/images/pandas-3.png" class="w-100" alt="pandas-3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
