--- a/index.html
+++ b/index.html
@@ -15,10 +15,93 @@
     <div id="topDiv">
         <div id='title' class="bg-dark text-white">
             <h1 class="text-center">
-                Hi, I'm Geronimo, a data analyst.<br>How can I help?
+                Hi, I'm Geronimo, a tutor.<br>How can I help?
             </h1>
         </div>
+
         <div class="accordion accordion-flush mt-5" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Knowledge base
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+
+                        <!-- <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
+                        (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
+                        API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
+                        Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
+                        Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
+                        Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
+                        Hadoop, Amazon Web Services and Machine Learning)">
+                            Data Analytics
+                          </button> -->
+
+                        <div class="accordion accordion-flush" id="accordionFive">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFive">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseFive" aria-expanded="false"
+                                        aria-controls="collapseFive">
+                                        Data Analytics
+                                    </button>
+                                </h2>
+                                <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                                    data-bs-parent="#accordionFive">
+                                    <div class="accordion-body">
+                                        Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
+                                        (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
+                                        API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
+                                        Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
+                                        Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
+                                        Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
+                                        Hadoop, Amazon Web Services and Machine Learning)
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Computer Science applied to JavaScript (Design Patterns, Data Structures, Algorithms, Big O Notation), Browser Based Technologies (HTML, CSS, JavaScript, jQuery, Responsive Design, Bootstrap, Handlebars, Storage (Local, Session), IndexedDB, React.js, Deployment (Heroku, Github), Git, Locally Popular MVC Framework (C#/ASP.NET, Python/Django, Java/Spring, PHP/Laravel), Databases (MySQL, MongoDB), Server-Side Development (Express, User Authentication, Sequelize, MERN Stack (MongoDB, Express.js, React.js, Node.js)), Quality and Performance (Unit Testing, Google Lighthouse, Webpack, PWAs (Progressive Web Apps), Lazy Loading, Service Workers), Accessibility (Semantic HTML), Agile Development (Kanban, Project Management, Issues, User Stories, Sprints, Standup, Retros)">
+                            Web Developer
+                          </button> -->
+
+                        <div class="accordion accordion-flush" id="accordionFour">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseFour" aria-expanded="false"
+                                        aria-controls="collapseFour">
+                                        Web Developer
+                                    </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                    data-bs-parent="#accordionFour">
+                                    <div class="accordion-body">
+                                        Computer Science applied to JavaScript (Design Patterns, Data Structures,
+                                        Algorithms, Big O Notation), Browser Based Technologies (HTML, CSS, JavaScript,
+                                        jQuery, Responsive Design, Bootstrap, Handlebars, Storage (Local, Session),
+                                        IndexedDB, React.js, Deployment (Heroku, Github), Git, Locally Popular MVC
+                                        Framework (C#/ASP.NET, Python/Django, Java/Spring, PHP/Laravel), Databases
+                                        (MySQL, MongoDB), Server-Side Development (Express, User Authentication,
+                                        Sequelize, MERN Stack (MongoDB, Express.js, React.js, Node.js)), Quality and
+                                        Performance (Unit Testing, Google Lighthouse, Webpack, PWAs (Progressive Web
+                                        Apps), Lazy Loading, Service Workers), Accessibility (Semantic HTML), Agile
+                                        Development (Kanban, Project Management, Issues, User Stories, Sprints, Standup,
+                                        Retros)
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -30,10 +113,12 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2"
-                                    href="#" data-bs-toggle="modal" data-bs-target="#github-history">History</a></li>
-                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none" class="col-md-3 pb-2"
-                                    href="#" data-bs-toggle="modal" data-bs-target="#repos">Repositories</a></li>
+                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none"
+                                    class="col-md-3 pb-2" href="#" data-bs-toggle="modal"
+                                    data-bs-target="#github-history">History</a></li>
+                            <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none"
+                                    class="col-md-3 pb-2" href="#" data-bs-toggle="modal"
+                                    data-bs-target="#repos">Repositories</a></li>
                             <li class="breadcrumb-item"><a class="col-md-3 pb-2 text-decoration-none"
                                     href="https://github.com/Geerooniimoo">Website</a></li>
                         </ol>
@@ -41,25 +126,6 @@
                 </div>
             </div>
 
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Accordion Item #2
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
-                    </div>
-                </div>
-            </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -71,10 +137,14 @@
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
+                        collapse plugin adds the appropriate classes that we use to style each element. These
+                        classes
+                        control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                        can
+                        modify any of this with custom CSS or overriding our default variables. It's also worth
+                        noting
+                        that just about any HTML can go within the <code>.accordion-body</code>, though the
+                        transition
                         does limit overflow.
                     </div>
                 </div>
@@ -110,13 +180,13 @@
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid row">
-                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                        data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#leaflet"
+                            href="#">Leaflet-challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">Geerooniimoo.io</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">D3-Challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">python-api-challenge</a>
-                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                        data-bs-target="#pandas" href="#">pandas-challenge</a>
+                        <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#pandas"
+                            href="#">pandas-challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
                         <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
@@ -165,10 +235,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="my-4" ><img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary"></div>
-                    <div class="my-4" ><img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1"></div>
-                    <div class="my-4" ><img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2"></div>
-                    <div class="my-4" ><img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3"></div>
+                    <div class="my-4"><img src="./assets/images/leaflet-summary.png" class="w-100" alt="summary">
+                    </div>
+                    <div class="my-4"><img src="./assets/images/leaflet-map1.png" class="w-100" alt="map1"></div>
+                    <div class="my-4"><img src="./assets/images/leaflet-map2.png" class="w-100" alt="map2"></div>
+                    <div class="my-4"><img src="./assets/images/leaflet-map3.png" class="w-100" alt="map3"></div>
                 </div>
             </div>
         </div>
@@ -181,19 +252,22 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="my-4" ><img src="./assets/images/pandas-4.png" class="w-100" alt="summary"></div>
-                    <div class="my-4" ><img src="./assets/images/pandas-5.png" class="w-100" alt="pandas-5"></div>
-                    <div class="my-4" ><img src="./assets/images/pandas-6.png" class="w-100" alt="pandas-6"></div>
-                    <div class="my-4" ><img src="./assets/images/pandas-1.png" class="w-100" alt="pandas-1"></div>
-                    <div class="my-4" ><img src="./assets/images/pandas-2.png" class="w-100" alt="pandas-2"></div>
-                    <div class="my-4" ><img src="./assets/images/pandas-3.png" class="w-100" alt="pandas-3"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-4.png" class="w-100" alt="summary"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-5.png" class="w-100" alt="pandas-5"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-6.png" class="w-100" alt="pandas-6"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-1.png" class="w-100" alt="pandas-1"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-2.png" class="w-100" alt="pandas-2"></div>
+                    <div class="my-4"><img src="./assets/images/pandas-3.png" class="w-100" alt="pandas-3"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
 </body>
 
