--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             </h1>
         </div>
         <div class="accordion accordion-flush mt-5" id="accordionExample">
-
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingSix">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -32,17 +31,48 @@
                 </h2>
                 <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
                     data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <p>
-                            If you are interested in scheduling a session, please click on the <strong><a
-                                class="text-decoration-none"
-                                href="https://calendly.com/geronimo-perez/50-minute-tutoring-session-1">link</a></strong> and
-                            select an available date and time that best works for you.
-                        </p>
+                    <div class="accordion-body text-center">
+
+                        <a class="text-decoration-none"
+                            href="https://calendly.com/geronimo-perez/50-minute-tutoring-session-1">
+
+                            <svg width="210" height="145">
+                                <rect x='5' y='5' rx="5" ry="5" width="200" height="130"
+                                    style="fill:rgb(245, 245, 245);stroke:rgba(0, 0, 0, 0.295);stroke-width:2;" />
+                                <g>
+                                    <text x='65' y='20' style='font-size:.65rem;font-weight:750;'>S</text>
+                                    <text x='80' y='20' style='font-size:.65rem;font-weight:750;'>M</text>
+                                    <text x='100' y='20' style='font-size:.65rem;font-weight:750;'>T</text>
+                                    <text x='115' y='20' style='font-size:.65rem;font-weight:750;'>W</text>
+                                    <text x='135' y='20' style='font-size:.65rem;font-weight:750;'>TH</text>
+                                    <text x='160' y='20' style='font-size:.65rem;font-weight:750;'>F</text>
+                                    <text x='175' y='20' style='font-size:.65rem;font-weight:750;'>S</text>
+                                    <text x='22' y='35' style='font-size:.65rem;font-weight:750;'>4 PM</text>
+                                    <text x='22' y='45' style='font-size:.65rem;font-weight:750;'>5 PM</text>
+                                    <text x='22' y='55' style='font-size:.65rem;font-weight:750;'>6 PM</text>
+                                    <text x='22' y='65' style='font-size:.65rem;font-weight:750;'>7 PM</text>
+                                    <text x='22' y='75' style='font-size:.65rem;font-weight:750;'>8 PM</text>
+                                    <text x='22' y='85' style='font-size:.65rem;font-weight:750;'>9 PM</text>
+                                    <text x='15' y='95' style='font-size:.65rem;font-weight:750;'>10 PM</text>
+                                    <text x='15' y='105' style='font-size:.65rem;font-weight:750;'>11 PM</text>
+                                    <text x='65' y='125' style='font-size:.65rem;font-weight:750;'>Working hours in
+                                        EST</text>
+                                </g>
+                                <rect x='62' y='28' style='fill:white;stroke:black;' width='10' height='81'></rect>
+                                <rect x='80' y='28' style='fill:blue;stroke:black;' width='10' height='81'></rect>
+                                <rect x='98' y='28' style='fill:blue;stroke:black;' width='10' height='81'></rect>
+                                <rect x='116' y='28' style='fill:blue;stroke:black;' width='10' height='81'></rect>
+                                <rect x='136' y='28' style='fill:blue;stroke:black;' width='10' height='81'></rect>
+                                <rect x='154' y='28' style='fill:blue;stroke:black;' width='10' height='81'></rect>
+                                <rect x='173' y='28' style='fill:white;stroke:black;' width='10' height='81'></rect>
+                                <rect x='40' y='117' style='fill:blue;stroke:black;' width='10' height='10'></rect>
+                            </svg>
+
+                            <br>Click to schedule</a>
                     </div>
                 </div>
             </div>
-            
+
             <div class="accordion-item">
                 <h2 class="accordion-item" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -105,18 +135,18 @@
                     </div>
                 </div>
             </div>
-           
+
         </div>
     </div>
 
     <!-- Modal -->
-    <div>
+    <div>  
         <div class="modal fade" id="github-history" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Github History under Geerooniimoo</h5>
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Github History under Geerooniimoo</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -134,7 +164,7 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Github History under Geerooniimoo</h5>
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Repositories under Geerooniimoo</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
@@ -149,7 +179,8 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">matplotlib-challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
@@ -222,8 +253,26 @@
                 </div>
             </div>
         </div>
-    </div>
 
+        <div class="modal fade" id="matplotlib" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">Matplotlib preview</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="my-4"><img src="./assets/images/pandas-4.png" class="w-100" alt="summary"></div>
+                        <div class="my-4"><img src="./assets/images/pandas-5.png" class="w-100" alt="pandas-5"></div>
+                        <div class="my-4"><img src="./assets/images/pandas-6.png" class="w-100" alt="pandas-6"></div>
+                        <div class="my-4"><img src="./assets/images/pandas-1.png" class="w-100" alt="pandas-1"></div>
+                        <div class="my-4"><img src="./assets/images/pandas-2.png" class="w-100" alt="pandas-2"></div>
+                        <div class="my-4"><img src="./assets/images/pandas-3.png" class="w-100" alt="pandas-3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
         integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
@@ -231,6 +280,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
         integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="./assets/app.js"></script>
 </body>
 
 </html>
