--- a/index.html
+++ b/index.html
@@ -83,33 +83,26 @@
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-
-                        <div class="accordion accordion-flush" id="accordionFive">
-                            <div class="accordion-item">
-                                <p>
-                                    <strong>Data Analytics: </strong>
-                                    Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
-                                    (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
-                                    API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
-                                    Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
-                                    Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
-                                    Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
-                                    Hadoop, Amazon Web Services and Machine Learning)
-                                </p>
-                                <p>
-                                    <strong>Web Developer: </strong>
-                                    Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
-                                    (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
-                                    API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
-                                    Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
-                                    Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
-                                    Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
-                                    Hadoop, Amazon Web Services and Machine Learning)
-                                </p>
-                            </div>
-
-                        </div>
-
+                        <p>
+                            <strong>Data Analytics: </strong>
+                            Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
+                            (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
+                            API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
+                            Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
+                            Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
+                            Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
+                            Hadoop, Amazon Web Services and Machine Learning)
+                        </p>
+                        <p>
+                            <strong>Web Developer: </strong>
+                            Intermediate Excel (Pivot Tables, VBA Scripting), Fundamental Statistics
+                            (Modelling, Forecast), Python Programming (Python 3, NumPy, Pandas, Matplotlib,
+                            API Interactions), Databases (Postgres / pgAdmin, SQLite, MongoDB),
+                            Extract-Transform-Load (ETL), Front End Web Visualization (HTML, CSS, Bootstrap,
+                            Dashboarding, JavaScript, Geomapping with JavaScript libraries), Business
+                            Intelligence Software (Tableau), Advanced Topics (Big Data Analytics with
+                            Hadoop, Amazon Web Services and Machine Learning)
+                        </p>
                     </div>
                 </div>
             </div>
@@ -135,12 +128,11 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 
     <!-- Modal -->
-    <div>  
+    <div>
         <div class="modal fade" id="github-history" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
@@ -180,7 +172,7 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
+                                data-bs-target="#matplotlib" href="#">matplotlib-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
@@ -262,12 +254,34 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="my-4"><img src="./assets/images/pandas-4.png" class="w-100" alt="summary"></div>
-                        <div class="my-4"><img src="./assets/images/pandas-5.png" class="w-100" alt="pandas-5"></div>
-                        <div class="my-4"><img src="./assets/images/pandas-6.png" class="w-100" alt="pandas-6"></div>
-                        <div class="my-4"><img src="./assets/images/pandas-1.png" class="w-100" alt="pandas-1"></div>
-                        <div class="my-4"><img src="./assets/images/pandas-2.png" class="w-100" alt="pandas-2"></div>
-                        <div class="my-4"><img src="./assets/images/pandas-3.png" class="w-100" alt="pandas-3"></div>
+
+
+                        # Matplotlib
+                        <div class="my-4"><img src="./assets/images/matplotlib_lab.png" class="w-100" alt="pandas-2"></div>
+
+                        With access to the complete data from an animal study where 250 mice were treated through a
+                        variety of drug regimes over the course of 45 days, analyzed the data to show how four
+                        treatments (Capomulin, Infubinol, Ketapril, and Placebo) compare. To do this created the
+                        following:
+
+                        * scatter plot that shows how the tumor volume changes over time for each treatment.
+                        * scatter plot that shows how the number of
+                        [metastatic](https://en.wikipedia.org/wiki/Metastasis) (cancer spreading) sites changes over
+                        time for each treatment.
+                        * scatter plot that shows the number of mice still alive through the course of treatment
+                        (Survival Rate)
+                        * bar graph that compares the total % tumor volume change for each drug across the full 45 days.
+                        * Include 3 observations about the results of the study. Use the visualizations you generated
+                        from the study data as the basis for your observations.
+
+                        Used Pthon, Jupyter Notebook, Pandas and Matplotlib Libraries.
+
+                        <div class="my-4"><img src="./assets/images/matplotlib_boxplot.png" class="w-100" alt="summary">
+                        </div>
+                        <div class="my-4"><img src="./assets/images/matplotlib_line.png" class="w-100" alt="pandas-5"></div>
+                        <div class="my-4"><img src="./assets/images/matplotlib_pie.png" class="w-100" alt="pandas-6"></div>
+                        <div class="my-4"><img src="./assets/images/matplotlib_regression.png" class="w-100" alt="pandas-1"></div>
+                        <div class="my-4"><img src="./assets/images/matplotlib_.png" class="w-100" alt="pandas-3"></div>
                     </div>
                 </div>
             </div>
