updated pie image

--- a/index.html
+++ b/index.html
@@ -255,9 +255,7 @@
                     </div>
                     <div class="modal-body">
 
-
-                        # Matplotlib
-                        <div class="my-4"><img src="./assets/images/matplotlib_lab.png" class="w-100" alt="pandas-2"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_lab.jpg" class="w-100" alt="pandas-2"></div>
 
                         With access to the complete data from an animal study where 250 mice were treated through a
                         variety of drug regimes over the course of 45 days, analyzed the data to show how four
@@ -276,12 +274,11 @@
 
                         Used Pthon, Jupyter Notebook, Pandas and Matplotlib Libraries.
 
-                        <div class="my-4"><img src="./assets/images/matplotlib_boxplot.png" class="w-100" alt="summary">
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_boxplot.png" class="w-100" alt="summary">
                         </div>
-                        <div class="my-4"><img src="./assets/images/matplotlib_line.png" class="w-100" alt="pandas-5"></div>
-                        <div class="my-4"><img src="./assets/images/matplotlib_pie.png" class="w-100" alt="pandas-6"></div>
-                        <div class="my-4"><img src="./assets/images/matplotlib_regression.png" class="w-100" alt="pandas-1"></div>
-                        <div class="my-4"><img src="./assets/images/matplotlib_.png" class="w-100" alt="pandas-3"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_line.png" class="w-100" alt="pandas-5"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_pie.png" class="w-100" alt="pandas-6"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_regression.png" class="w-100" alt="pandas-1"></div>
                     </div>
                 </div>
             </div>
