--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#sql" href="#">SQL-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#sql"
+                                href="#">SQL-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
@@ -293,54 +293,50 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title ms-auto" id="exampleModalLabel">SQL preview</h5>
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">SQL preview</h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
 
-                        Experience as a Data Engineer
-                        I did a research project on employees of a corporation from the 1980s and 1990s. All that remain
-                        of the database of employees from that period were six CSV files. I designed the tables to hold
-                        data in the CSVs, imported the CSVs into a SQL database, and answered questions about the data.
-                        In other words, performed data Modeling, data engineering and data analysis.
+                        <h5> Data Modeling, Data Engineering and Data Analysis</h5>
+                        <p> Used six csv files with employee's data of a corporation from the 1980s and 1990s. Designed the tables to hold data in the CSVs, imported the CSVs into a SQL database, and answered questions about the data. In other words, performed data Modeling, data engineering and data analysis.
+                        </p>
 
-                        * used Visual Studio Code as a code editor and applied scritpt to postgreSQL database
-                        * sketched out an ERD of the tables by exporting schema.sql to
-                        [http://www.quickdatabasediagrams.com](http://www.quickdatabasediagrams.com)
-                        * Created a histogram to visualize the most common salary ranges for employees.
-                        * Created a bar chart of average salary by title.
-                        * Created a `.sql` table schemata
-                        * Created a `.sql` file queries
-                        * Created a Jupyter Notebook
-                        * specifed data types, primary keys, foreign keys, and other constraints.
-                        * Imported each CSV file into the corresponding SQL table
-                        * Listed the following details of each employee: employee number, last name, first name, sex,
-                        and salary.
-                        * Listed first name, last name, and hire date for employees who were hired in 1986.
-                        * Listed the manager of each department with the following information: department number,
-                        department name, the manager's employee number, last name, first name.
-                        * Listed the department of each employee with the following information: employee number, last
-                        name, first name, and department name.
-                        * Listed first name, last name, and sex for employees whose first name is "Hercules" and last
-                        names begin with "B."
-                        * Listed all employees in the Sales department, including their employee number, last name,
-                        first name, and department name.
-                        * Listed all employees in the Sales and Development departments, including their employee
-                        number, last name, first name, and department name.
-                        * In descending order, listed the frequency count of employee last names, i.e., how many
-                        employees share each last name.
-                        * Imported the SQL database into Pandas
-
-
+                        <ul>
+                            <li> used Visual Studio Code as a code editor and applied scritpt to postgreSQL database</li>
+                            <li> sketched out an ERD of the tables by exporting schema.sql to [http://www.quickdatabasediagrams.com](http://www.quickdatabasediagrams.com)</li>
+                            <li> Created a histogram to visualize the most common salary ranges for employees</li>
+                            <li> Created a bar chart of average salary by title</li>
+                            <li> Created a `.sql` table schemata</li>
+                            <li> Created a `.sql` file queries</li>
+                            <li> Created a Jupyter Notebook</li>
+                            <li> specifed data types, primary keys, foreign keys, and other constraints</li>
+                            <li> Imported each CSV file into the corresponding SQL table</li>
+                            <li> Listed the following details of each employee: employee number, last name, first name, sex, and salary.</li>
+                            <li> Listed first name, last name, and hire date for employees who were hired in 1986.</li>
+                            <li> Listed the manager of each department with the following information: department number, department name, the manager's employee number, last name, first name.</li>
+                            <li> Listed the department of each employee with the following information: employee number, last name, first name, and department name.</li>
+                            <li> Listed first name, last name, and sex for employees whose first name is "Hercules" and
+                                last
+                                names begin with "B."</li>
+                            <li> Listed all employees in the Sales department, including their employee number, last
+                                name,
+                                first name, and department name</li>
+                            <li> Listed all employees in the Sales and Development departments, including their employee
+                                number, last name, first name, and department name.</li>
+                            <li> In descending order, listed the frequency count of employee last names, i.e., how many
+                                employees share each last name</li>
+                            <li> Imported the SQL database into Pandas</li>
+                        </ul>
                         <div class="row">
-                            <div class="my-4 col-md-4"><img src="./assets/images/sql_bar.png"
-                                    class="w-100" alt="sql_bar">
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_bar.png" class="w-100"
+                                    alt="sql_bar">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/sql_hist.png"
-                                    class="w-100" alt="sql_bar">
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_hist.png" class="w-100"
+                                    alt="sql_bar">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/sql_schema.png"
-                                    class="w-100" alt="sql_bar">
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_schema.png" class="w-100"
+                                    alt="sql_bar">
                             </div>
                         </div>
                     </div>
