--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">Web-Design-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#web" href="#">Web-Design-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_to_Jupiter</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Password-Generator</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">FriendFinder</a>
@@ -289,6 +290,7 @@
                 </div>
             </div>
         </div>
+
         <div class="modal fade" id="sql" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
@@ -299,12 +301,17 @@
                     <div class="modal-body">
 
                         <h5> Data Modeling, Data Engineering and Data Analysis</h5>
-                        <p> Used six csv files with employee's data of a corporation from the 1980s and 1990s. Designed the tables to hold data in the CSVs, imported the CSVs into a SQL database, and answered questions about the data. In other words, performed data Modeling, data engineering and data analysis.
+                        <p> Used six csv files with employee's data of a corporation from the 1980s and 1990s. Designed
+                            the tables to hold data in the CSVs, imported the CSVs into a SQL database, and answered
+                            questions about the data. In other words, performed data Modeling, data engineering and data
+                            analysis.
                         </p>
 
                         <ul>
-                            <li> used Visual Studio Code as a code editor and applied scritpt to postgreSQL database</li>
-                            <li> sketched out an ERD of the tables by exporting schema.sql to [http://www.quickdatabasediagrams.com](http://www.quickdatabasediagrams.com)</li>
+                            <li> used Visual Studio Code as a code editor and applied scritpt to postgreSQL database
+                            </li>
+                            <li> sketched out an ERD of the tables by exporting schema.sql to
+                                [http://www.quickdatabasediagrams.com](http://www.quickdatabasediagrams.com)</li>
                             <li> Created a histogram to visualize the most common salary ranges for employees</li>
                             <li> Created a bar chart of average salary by title</li>
                             <li> Created a `.sql` table schemata</li>
@@ -312,10 +319,13 @@
                             <li> Created a Jupyter Notebook</li>
                             <li> specifed data types, primary keys, foreign keys, and other constraints</li>
                             <li> Imported each CSV file into the corresponding SQL table</li>
-                            <li> Listed the following details of each employee: employee number, last name, first name, sex, and salary.</li>
+                            <li> Listed the following details of each employee: employee number, last name, first name,
+                                sex, and salary.</li>
                             <li> Listed first name, last name, and hire date for employees who were hired in 1986.</li>
-                            <li> Listed the manager of each department with the following information: department number, department name, the manager's employee number, last name, first name.</li>
-                            <li> Listed the department of each employee with the following information: employee number, last name, first name, and department name.</li>
+                            <li> Listed the manager of each department with the following information: department
+                                number, department name, the manager's employee number, last name, first name.</li>
+                            <li> Listed the department of each employee with the following information: employee number,
+                                last name, first name, and department name.</li>
                             <li> Listed first name, last name, and sex for employees whose first name is "Hercules" and
                                 last
                                 names begin with "B."</li>
@@ -332,11 +342,71 @@
                             <div class="my-4 col-md-4"><img src="./assets/images/sql_bar.png" class="w-100"
                                     alt="sql_bar">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/sql_hist.png" class="w-100"
-                                    alt="sql_bar">
+                            <div class="my-4 col-md-4"><img src="./assets/images/web_2.png" class="w-100" alt="web_2">
                             </div>
                             <div class="my-4 col-md-4"><img src="./assets/images/sql_schema.png" class="w-100"
                                     alt="sql_bar">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="web" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Visualization Dashboard Website</h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            The purpose of this project is to visualize the analysis of the weather changes as you get closer to the
+                            equator. To accomplish this, we first pulled data from the OpenWeatherMap API to
+                            assemble a dataset on over 500 cities with the use of Pandas, Python and Jupyter Notebook.
+
+                            After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs.
+                            latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity.
+                            This site provides the source data and visualizations created as part of the analysis, as
+                            well as explanations and descriptions of any trends and correlations.
+
+                            Created a visualization dashboard website using data explained above. In building this
+                            dashboard, created individual pages for each plot and a means by which we can navigate
+                            between them. These pages contain the visualizations and their corresponding explanations.
+                            Also, have a landing page, a page where we can see a comparison of all of the plots, and
+                            another page where we can view the data used to build them.
+
+                            The website consists of 7 pages total, with a navbar in every page and including the
+                            following:
+
+                        </p>
+                        <ul>
+                            <li>Bootstrap (outsourced CSS)</li>
+                            <li>A [landing page](#landing-page) containing:</li>
+                            <li>An explanation of the project.</li>
+                            <li>Links to each visualizations page.</li>
+                            <li>Four [visualization pages](#visualization-pages), each with:</li>
+                            <li>A descriptive title and heading tag.</li>
+                            <li>The plot/visualization itself for the selected comparison.</li>
+                            <li>A paragraph describing the plot and its significance.</li>
+                            <li>A ["Comparisons" page](#comparisons-page) that:</li>
+                            <li>Contains all of the visualizations on the same page so we can easily visually compare
+                                them.</li>
+                            <li>Uses a bootstrap grid for the visualizations.</li>
+                            <li>The grid must be two visualizations across on screens medium and larger, and 1 across on
+                                extra-small and small screens.</li>
+                            <li>A ["Data" page](#data-page) that:</li>
+                            <li>Displays a responsive table containing the data used in the visualizations.</li>
+                            <li>The data comes from exporting the `.csv` file converted as HTML with the use of Python
+                                and Pandas Library.</li>
+                        </ul>
+                        <div class="row">
+                            <div class="my-4 col-md-4"><img src="./assets/images/web_1.png" class="w-100" alt="web_1">
+                            </div>
+                            <div class="my-4 col-md-4"><img src="./assets/images/web_2.png" class="w-100" alt="web_2">
+                            </div>
+                            <div class="my-4 col-md-4"><img src="./assets/images/web_3.png" class="w-100" alt="web_3">
                             </div>
                         </div>
                     </div>
