added web modal

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
-                            data-bs-target="#web" href="#">Web-Design-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#web"
+                                href="#">Web-Design-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_to_Jupiter</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Password-Generator</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">FriendFinder</a>
@@ -357,29 +357,33 @@
             <div class="modal-dialog modal-dialog-scrollable">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Visualization Dashboard Website</h3>
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Visualization Dashboard</h3>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <p>
-                            The purpose of this project is to visualize the analysis of the weather changes as you get closer to the
+                            The purpose of this project is to visualize the analysis of the weather changes as you get
+                            closer to the
                             equator. To accomplish this, we first pulled data from the OpenWeatherMap API to
                             assemble a dataset on over 500 cities with the use of Pandas, Python and Jupyter Notebook.
-
+                        </p>
+                        <p>
                             After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs.
                             latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity.
                             This site provides the source data and visualizations created as part of the analysis, as
                             well as explanations and descriptions of any trends and correlations.
-
+                        </p>
+                        <p>
                             Created a visualization dashboard website using data explained above. In building this
                             dashboard, created individual pages for each plot and a means by which we can navigate
                             between them. These pages contain the visualizations and their corresponding explanations.
                             Also, have a landing page, a page where we can see a comparison of all of the plots, and
                             another page where we can view the data used to build them.
-
+                        </p>
+                        <p>
                             The website consists of 7 pages total, with a navbar in every page and including the
                             following:
-
+                        </p>
                         </p>
                         <ul>
                             <li>Bootstrap (outsourced CSS)</li>
@@ -402,11 +406,13 @@
                                 and Pandas Library.</li>
                         </ul>
                         <div class="row">
-                            <div class="my-4 col-md-4"><img src="./assets/images/web_1.png" class="w-100" alt="web_1">
+                            <div class="col-md-6"><img src="./assets/images/web_2.png" class="w-100" alt="web_2">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/web_2.png" class="w-100" alt="web_2">
+                            <div class="col-md-6"><img src="./assets/images/web_3.png" class="w-100" alt="web_3">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/web_3.png" class="w-100" alt="web_3">
+                        </div>
+                        <div class="row">
+                            <div class="my-4 col-md-12"><img src="./assets/images/web_1.png" class="w-100" alt="web_1">
                             </div>
                         </div>
                     </div>
